# disk-space-inspect

./: AGENTS.md  Cargo.toml  LICENSE  README.md
benchmarks/: README.md  large.json  medium.json  tiny.json
benchmarks/samples/tiny/: readme.txt
docs/: cache-maintenance.md  cache-skip-validation.md  manual-qa.md  watcher-validation.md
src/: app.rs  cache.rs  fs.rs  lib.rs  main.rs  query.rs  scanner.rs  tree.rs  util.rs  watcher.rs
tests/: benchmarks.rs  cache_integration.rs  watcher.rs
