[package]
name = "disk-space-inspect"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5"
eframe = { version = "0.27", default-features = false, features = ["glow", "default_fonts"] }
egui_extras = { version = "0.27", default-features = false }
globset = "0.4"
shellexpand = "3"
walkdir = "2"
chrono = { version = "0.4", features = ["clock"] }
pico-args = "0.5"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "dusk"
path = "src/main.rs"

[[bin]]
name = "bench_scan"
path = "src/bin/bench_scan.rs"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
